--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,7 @@
 :root {
-  --h1-font-size-mobile: 3rem;
-  --h1-font-size-desktop: 7rem;
+  --welcome-h1-font-size-mobile: 3rem;
+  --welcome-h1-font-size-tablet: 5rem;
+  --welcome-h1-font-size-desktop: 7rem;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
 
 h1 {
   align-self: center;
-  font-size: var(--h1-font-size-mobile);
+  font-size: var(--welcome-h1-font-size-mobile);
 }
 
 ul {
@@ -26,10 +27,13 @@ nav {
 }
 
 @media screen and (min-width: 768px) {
+  h1 {
+    font-size: var(--welcome-h1-font-size-tablet);
+  }
 }
 
 @media screen and (min-width: 1440px) {
   h1 {
-    font-size: var(--h1-font-size-desktop);
+    font-size: var(--welcome-h1-font-size-desktop);
   }
 }
