--- a/css/pages.css
+++ b/css/pages.css
@@ -12,6 +12,8 @@
   --main-element-margin-desktop: 5dvh;
   --h2-font-size-mobile: 1.5rem;
   --h2-font-size-desktop: 2rem;
+  --h2-margin-bottom: 2dvh;
+  --footer-margin-bottom: 3dvh;
 }
 
 header {
@@ -45,11 +47,11 @@ main > * {
 
 h2 {
   font-size: var(--h2-font-size-mobile);
-  margin-bottom: 2dvh;
+  margin-bottom: var(--h2-margin-bottom);
 }
 
 footer {
-  margin-bottom: 3dvh;
+  margin-bottom: var(--footer-margin-bottom);
 }
 
 footer > ul {
